--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,3 +24,6 @@ en:
   sign_out: Sign out
   sign_in: Sign in with Facebook
   i_will_read_this: I will read this
+  i_will_not_read_this: I will not read this
+  add_title_khatma: Add title to khatma
+  create: create
