Cleaning interface, yet to be done

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -29,3 +29,4 @@ ar:
   i_will_not_read_this: لن أقرأه
   add_title_khatma: ضع عنوانا للختمة
   create: إنشاء الختمة
+  users_list: قائمة المستخدمين
