--- a/README.rdoc
+++ b/README.rdoc
@@ -11,6 +11,8 @@ Things you may want to cover:
 
 * Configuration
 
+Copy `config/application.yml.example` to `config/application.yml.example` and enter your Facebook App ID and Secret there.
+
 * Database creation
 
 * Database initialization
