Finishing up UI

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -24,7 +24,13 @@ ar:
   sign_out: سجل خروج
   sign_in: سجل دخول بالفيسبوك
   you_need_to_sign_in: يلزمج تسجيل الدخول أولا
-  about_khatma: تطبيق لتنظيم المشاركة في إهداء ثواب قرآة القرآن
+  take_care: كن حذرا
+  are_you_sure: هل أنت متأكد؟
+  delete_this: إحذفها
+  contact_us: راسلنا
+  about_us: عن الموقع
+  about_us_long: تطبيق لتنظيم المشاركة في إهداء ثواب قرآة القرآن
+  back_home: العودة للصفحة الرئيسية
   i_will_read_this: سأقرأه
   i_will_not_read_this: لن أقرأه
   add_title_khatma: ضع عنوانا للختمة
