--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,4 +35,5 @@ en:
   i_will_not_read_this: I will not read this
   add_title_khatma: Add title to khatma
   create: create
+  warning: Warning
   users_list: Users list
